# ds-u2-actividad-1-listasenlazadassimples-AngelCS0124

./: .gitignore  CMakeLists.txt  Doxyfile  ListaGeneral.h  ListaSensor.h  README.md  SensorBase.h  SensorPresion.h  SensorTemperatura.h  main.cpp  reporte_proyecto.md
docs/html/: _lista_general_8h.html  _lista_general_8h_source.html  _lista_sensor_8h.html  _lista_sensor_8h_source.html  _sensor_base_8h.html  _sensor_base_8h_source.html  _sensor_presion_8h.html  _sensor_presion_8h_source.html  _sensor_temperatura_8h.html  _sensor_temperatura_8h_source.html  annotated.html  class_lista_general-members.html  class_lista_general.html  class_lista_general.js  class_lista_sensor-members.html  class_lista_sensor.html  class_lista_sensor.js  class_sensor_base-members.html  class_sensor_base.html  class_sensor_base.js  class_sensor_presion-members.html  class_sensor_presion.html  class_sensor_presion.js  class_sensor_temperatura-members.html  class_sensor_temperatura.html  class_sensor_temperatura.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  main_8cpp.js  menudata.js  (+8 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  files_0.js  files_2.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  searchdata.js  variables_0.js  variables_4.js
esp32/esp_32_config/: esp_32_config.ino
